feat!: very basic statistic

--- a/templates/header.jinja
+++ b/templates/header.jinja
@@ -35,5 +35,6 @@
             <a href='/' class='mdui-list-item mdui-ripple'>Home</a>
             <a href='/insert' class='mdui-list-item mdui-ripple'>Insert</a>
             <a href='/inspect' class='mdui-list-item mdui-ripple'>Inspect</a>
+            <a href='/statistic' class='mdui-list-item mdui-ripple'>Statistic</a>
         </div>
     </div>
